IALERT-4054: Improve log messages when creating Black Duck issue callback events